# Pest-Detection

./: .env  .env.example  .gitignore  .replit  AI_FEATURES_SUMMARY.md  DEPLOYMENT.md  GROQ_SETUP.md  QUICK_START.md  README.md  START_PROJECT.md  TESTING_GUIDE.md  TRAINING_UPDATE_NOV6.md  design_guidelines.md  package-lock.json  package.json  railway.toml  replit.md  start.ps1  tailwind.config.ts  temp_docs.html  test-cerebras.ts  test-detection-local.ts  test_detection.html  test_detection.py  vercel.json
attached_assets/: Pasted-PestEdge-FSL-Democratizing-Real-Time-Pest-Detection-via-Hybrid-Few-Shot-Learning-on-Low-Cost-Edge-D-1762357950029_1762357950030.txt
client/: index.html
flask_detection_app/: README.md  START_FLASK_APP.ps1  app.py  requirements.txt
python_ml_service/: .env  .env.example  QUICKSTART.md  README.md  TRAINING_STATUS.md  disease_database.py  generate_prototypes.py  main.py  main_lazy.py  pyproject.toml  railway.json  requirements.txt  serve.py  start.py  start_test.bat  test_minimal.py  test_service.py  train_all_plants.py  train_plantvillage.py  train_simple.py  training_log.txt
python_ml_service/api/: __init__.py  router.py
python_ml_service/assets/: .gitkeep  class_mapping.json  class_prototypes.json  training_history.json
python_ml_service/core/: __init__.py  config.py
python_ml_service/ml/: __init__.py  encoder.py  inference.py  utils.py
python_ml_service/models/: __init__.py  schemas.py
python_ml_service/training/: __init__.py  dataset.py  train.py
server/: cerebras.ts  gemini.ts  index.ts  ml-service.ts  openai.ts  routes.ts  (+1 more)
(+13 files in other folders)
